--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     <div class="grid">
 
       <div class="container">
-        <a href="lumapath.html">
+        <a href="blobby.html">
           <div class="flex">
             <div class="item2">
               <img src="img/temp.png" alt="">
             </div>
             <div class="item1">
-              <h3> LumaPath </h3>
-              <p>Lumapath is a VR exercise that is targeted for users with Chronic Pain</p>
+              <h3> Adventure of Blobby </h3>
+              <p> Adventure of blobby is a side scrolling platformer</p>
             </div>
           </div>
         </a>
@@ -130,7 +130,7 @@
       <div class="container">
         <h3> Ludum Dare 45 - Finished Raccoon Bikini Game </h3>
         <p> Finished Raccoon Bikini Game was developed for Ludum Dare 45, for this game we wanted to create something that was much different from other submission. The theme was "Start with Nothing" and we didn't want to create a shooter where you had nothing
-          to start with so we came up with the idea where the player has to put in the platforms themselves.</p>
+          to start with so we came up with the idea where the player has to put in the platforms themselves. The team consisted 4 members, my challenge was creating the inventory system which supports dynamic size and </p>
         <!-- <a href="" class="button">
         Process
       </a> -->
