update on blobby title screen

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="blobby.html">
           <div class="flex">
             <div class="item2">
-              <img src="img/temp.png" alt="">
+              <img src="img/blobby/title.png" alt="">
             </div>
             <div class="item1">
               <h3> Adventure of Blobby </h3>
