adjusted AoB title information

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="item1">
               <h3> Adventure of Blobby </h3>
-              <p> Adventure of blobby is a side scrolling platformer</p>
+              <p> Adventure of Blobby is a side scrolling platformer, the game was developed for both desktop and mobile</p>
             </div>
           </div>
         </a>
