--- a/gotham.html
+++ b/gotham.html
@@ -42,7 +42,7 @@
     <h2> Team </h2>
     <div class="grid">
       <div class="cell">
-        <img src="img/gotham/codeSnap.png" alt="">
+        <img src="img/gotham/CodeSnap.png" alt="">
 
       </div>
       <div class="cell">
