typo in back to space

--- a/backtospace.html
+++ b/backtospace.html
@@ -46,7 +46,7 @@
       <div class="cell">
         <img src="img/backtospace/concept.JPG" alt="">
 
-        <img src="img/backtospace/concept2.jpg" alt="">
+        <img src="img/backtospace/concept2.JPG" alt="">
       </div>
       <div class="cell">
         <p> The Team consist of one programmer, two 3D modelers and a documentor. As a group, we decided to make this project an introduction to further
