image changes for blobby

--- a/blobby.html
+++ b/blobby.html
@@ -27,7 +27,7 @@
   <div class="head grid">
     <div class="cell">
       <div class="adjust">
-      <h2> Back To Space </h2>
+      <h2> Adventure of Blobby </h2>
       <p>
         Back to Space, a virtual reality simulation game, produced for our class, Interactive Arts and Technology 445, Immersive Environments.
         Our project is a first person puzzle open exploratory world space simulation where the user, playing a character named John, must find a
@@ -36,7 +36,7 @@
     </div>
     </div>
     <div class="cell">
-      <img src="img/backtospace/showcase.JPG" alt="">
+      <img src="img/blobby/layout.png" alt="">
     </div>
   </div>
   <img class="swipe2" src="img/shape3.svg" alt="">
@@ -44,9 +44,7 @@
     <h2> Team </h2>
     <div class="grid">
       <div class="cell">
-        <img src="img/backtospace/concept.JPG" alt="">
-
-        <img src="img/backtospace/concept2.jpg" alt="">
+        <img src="img/blobby/gameplay.gif" alt="">
       </div>
       <div class="cell">
         <p> The Team consist of one programmer, two 3D modelers and a documentor. As a group, we decided to make this project an introduction to further
@@ -73,8 +71,7 @@ space.
       </a>
       </div>
       <div class="cell">
-        <img src="img/backtospace/maya.jpg" alt="">
-        <img src="img/backtospace/cargo.png">
+        <img src="img/blobby/platform.gif" alt="">
       </div>
     </div>
   </div>
