reorganize layout of blobby

--- a/blobby.html
+++ b/blobby.html
@@ -36,7 +36,7 @@
     </div>
     </div>
     <div class="cell">
-      <img src="img/blobby/layout.png" alt="">
+      <img src="img/blobby/title.png" alt="">
     </div>
   </div>
   <img class="swipe2" src="img/shape3.svg" alt="">
@@ -44,7 +44,7 @@
     <h2> Team </h2>
     <div class="grid">
       <div class="cell">
-        <img src="img/blobby/gameplay.gif" alt="">
+        <img src="img/blobby/layout.png" alt="">
       </div>
       <div class="cell">
         <p> The Team consist of one programmer, two 3D modelers and a documentor. As a group, we decided to make this project an introduction to further
@@ -72,6 +72,7 @@ space.
       </div>
       <div class="cell">
         <img src="img/blobby/platform.gif" alt="">
+        <img src="img/blobby/gameplay.gif" alt="">
       </div>
     </div>
   </div>
