removed about page and updated AoB

--- a/blobby.html
+++ b/blobby.html
@@ -20,7 +20,6 @@
     <div class="navbar-links black">
       <ul>
         <li><a href="index.html">Projects</a></li>
-        <li><a href="about.html">About</a></li>
         <li><a href="Resume.pdf">Resumé</a></li>
       </ul>
   </nav>
@@ -29,9 +28,8 @@
       <div class="adjust">
       <h2> Adventure of Blobby </h2>
       <p>
-        Back to Space, a virtual reality simulation game, produced for our class, Interactive Arts and Technology 445, Immersive Environments.
-        Our project is a first person puzzle open exploratory world space simulation where the user, playing a character named John, must find a
-        way to save themselves when things take a fatal twist on their spacecraft.
+        Adventure of blobby is a side scroller that follows a shapeshifter who is left behind by his family.
+        The goal is to find his family navigating though enviornment where you learn to shape shift to complete puzzles.
       </p>
     </div>
     </div>
@@ -47,14 +45,11 @@
         <img src="img/blobby/layout.png" alt="">
       </div>
       <div class="cell">
-        <p> The Team consist of one programmer, two 3D modelers and a documentor. As a group, we decided to make this project an introduction to further
-          levels that we plan on building past this semester.  It designed to teach the basics to our players and give our project some exposure to the general public.
+        <p> The Team consist of two programmer, an artist and a puzzle designer. As a group, we wanted to make the sidescroller unique by allowing the player to change shape
+          while each one have an advantage and disadvantage. We also wanted our game to run on mobile devices where the user is able to easily control the character without
+          issues.
         </p>
-        <p> We were greatly inspired by sci-fi cult classics, like Star Trek and Star Wars, as well as newer space themed
-movies, such as Gravity and Interstellar. Our vision was to create an environment where people could
-immersively experience these fantastic fandoms all in one world. We can't all be astronauts and we can't all live
-out our fantasy Star Trek lives, but this is something that we hope sci-fi fans can use to get one step closer to
-space.
+        <p> We were inspired by Limbo and Inside and our theme takes place in a forest where the world is in chaos. The player must find their family while navigating through different puzzles. We wanted to reward the player who explore by adding collectable gems.
 </p>
       </div>
     </div>
@@ -64,8 +59,7 @@ space.
     <h2> Specifics </h2>
     <div class="grid">
       <div class="cell">
-      <p> As the only progammer, I populated the 3D enviornment as well as created the experience. I created different rooms where the player has to navigate through the enviornment
-        in order to progress the story and complete complex puzzles. </p>
+      <p> I worked on some of the game mechanics including parallax background, moving platforms that the player moves with, button triggers and finally porting the game over to mobile. One challenge I found was that this was the first mobile game I developed and had some trouble getting controls brought over.</p>
         <a href="https://catinthebox445.weebly.com/" class="button">
         view
       </a>
