--- a/blobby.html
+++ b/blobby.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Back To Space</title>
+  <title>Adventure of Blobby</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato|Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
